# PhotoHelper

./: .gitignore  AGENTS.md  README.md  main.py  pipeline.py  pyproject.toml
.github/workflows/: build-windows.yml
agents/: __init__.py  best_photo_selection.py  identity_grouping.py  portrait_cropping.py  shared.py
