[project]
name = "jotita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.8",
    "scikit-learn>=1.4",
    "insightface>=0.7",
    "onnxruntime>=1.16",
    "scikit-image>=0.21",
    "pillow>=10.0",
]
